--- a/2014-02-04.md
+++ b/2014-02-04.md
@@ -1,7 +1,7 @@
 Vadim Ogievetsky
 ================
-Co-inventor of D3
-=================
+###Co-inventor of D3
+
 
 [slides about D3](vadim.ogievetsky.com/IntroD3)
 
