--- a/2014-02-18.md
+++ b/2014-02-18.md
@@ -1,6 +1,6 @@
 CS 171 Notes
 ============
-2014-02-18
+### February 18, 2014
 
 Design studio on Thursday.
 Design graph we are making for Homework 2.
