end of lecture, Feb 25

--- a/2014-02-25.md
+++ b/2014-02-25.md
@@ -64,11 +64,47 @@ Combination
 Combine multiple types of charts in one.
 Allows you to use the best type of visualization for each dimension.
 
-Scatterplot Matrices
---------------------
+Scatterplot Matrices (Splom)
+----------------------------
 
 Matrix of size d*d.
 Each row and column represents a dimension.
 Each cell is a scatterplot of one dimension vs another.
 
 However, this also grows with d<sup>2</sup>.
+
+Data Reduction
+--------------
+
+### Sampling:
+
+Show a random subset of elements.
+Efficiently makes a large dataset easier to present visually.
+Only do this for display purposes.
+Also, consider a selection method that preserves randomness and (maybe) preserves outliers.
+
+### Filtering
+
+Define a criteria to remove data.
+For example, limit to values < / > / = a value in one dimension, or only records that vary.
+This is good with interactivity.
+Allow the user to decide what the filter should be.
+
+Pixel-Based Representations
+---------------------------
+
+Each cell is a pixel.
+Give each cell a color or value or weight based on that data.
+
+Meaning of display is derived by ordering, so you need to figure out a way to order the data (perhaps clustering).
+
+This is very scalable because you can go down to one pixel per element.
+However, you want to do this for homogeneous data because you'll end up comparing things.
+
+Also, be careful of color blindness.
+
+Clustering
+----------
+
+Classification of items into "similar" bins based on similarity measures.
+Divide the data into sets of bins and put similar items into the same bin.
