notes finished Feb 27

--- a/2014-02-27.md
+++ b/2014-02-27.md
@@ -1,3 +1,127 @@
 CS 171 Notes
 ============
 ### February 27, 2014
+### Text in visualizations
+
+Final project proposal due with HW 3
+
+Features of text:
+
+* Symbols are reusable
+* Linearly processed
+* Relies on language to have meaning, different across population groups
+* Semi-structured: grammer, words, paragraphs; appearance, calligraphy
+* Legibility
+
+Text as Visualization
+----------------------
+
+Typography:
+
+* typefaces (serif, sans-serif, **bold**, *italic*, etc.)
+* point size (nowadays, point = 1/17 inch)
+* line length (alignment: right, left, justified)
+* vertical alignment, line spacing (leading)
+* horizontal: spaces between groups of letters (tracking)
+* space between pairs of letters (kerning) 
+* combining letters into a ligature (oe, ae, German ss)
+
+Creating a font type is an art, lots of design there
+
+Typesetting:
+
+* letterpress printing
+* Linotype machine
+* digital printing/copying (dot-matrix, inkjet, laser)
+* dgital text (resolution is important)
+
+Encoding text for electronic devices:
+
+* mapping charaters to bytes
+* Universal Character Set (UTF-[**8**, 16, 32]) fonts
+* exchange of typeset documents: PostScript and PDF
+
+Rules of thumb:
+
+* limit the use of fonts to a few typefaces
+* use "special" fonts only when appropriate
+* good resource: [Google fonts](https://www.google.com/fonts)
+
+Visualization for Full Text
+---------------------------
+
+In daily use.
+For example, webpages with links, hover elements, etc.
+
+Document with variable text scaling.
+Make important words larger, highlighted.
+
+Visualization for Text
+----------------------
+
+Visualization based on text, even if you can't actuall read the text itself.
+Example: Highlighting entire document based on where search term appears.
+You can't read the actual words, but you can see how often a term appears.
+
+Visualizations for Text Collections
+-------------------------------------
+
+Pre-processing large collections:
+
+* clean (regular expressions)
+* sentence splitting
+* change all to lower case
+* stopword removal (most frequent words in a language because those are likely not important)
+* stemming (word stems, ex: \_\_\_s, \_\_\_ed; find words with same base.)
+* Part of speech tagging (figure out whether "bow" is a verb or a noun in each case, part of speech of each word)
+* noun chunking (find noun groups, eg. New Jersey, french fries)
+* Name entity recognition (find important words, proper nouns, pronouns, titles)
+* deep parsing - try to "understand" text
+
+However, text processing is difficult, relies a lot on context
+
+Usually, after preprocessing, you have a count of words (e.g. one "president", two "dragon") or concepts.
+You can also get a bag of words (for similarity measures)
+
+You can then create visualizations like tag clouds (eg. [Flickr](http://www.flicker.com/photos/tags)) or [word cloud](http://www.wordle.net).
+[Word trees](http://www-958.ibm.com/software/data/cognos/manyeyes/page/Word_Tree.html) are another example.
+They create a tree of sentences, so all sentences that start the same way are grouped in a tree.
+
+Visualzations for Text Documents
+---------------------------------
+
+[WordVis](http://www.wordvis.com) creates network of words and their meanings/synonyms.
+[DocuBurst](http://vialab.science.uoit.ca/docuburst/welcome.php) then does this on an entire document, showing the different uses of some word in a document and then the different uses of those words radiating out.
+For example, in Alice in Wonderland, center ring could show animal.
+Ring around that shows types of animals like dog or bird, then next out ring shows different types of birds, dogs, etc.
+
+Visualizations for Language Analysis
+------------------------------------
+
+Analyze sentences for readability: difficulty of vocabulary in sentence, difficulty of structure, "grade level"
+You can also do this to analyze whole documents.
+You can then compare documents between different authors or different documents by the same author to confirm authorship or other things.
+
+Use these tools for digital forensics, for instance.
+See if you can tell who wrote something or prove some person wrote a given email.
+
+Visualizations for Actual Text Collections
+------------------------------------------
+
+Often, real text collections have other things as well, pictures, figures, etc.
+It's often useful to take those into account as well.
+For example, books have book covers and cover colors, which can help a visualization.
+Or, you could use pictures in papers to help organize or browse a collection of scientific papers.
+
+Text in Visualiztions
+---------------------
+
+Examples:
+
+* Labels
+* Map Legends
+* NOT IKEA furniture assembly instructions
+
+Text in visualizations helps storytelling.
+You can use text to explain interesting parts of the visualizations or parts that viewers may not understand.
+It gives viewers some place to start when they look at the visualization.
